--- a/index.html
+++ b/index.html
@@ -63,7 +63,39 @@
     </header>
 
     <main>
-      <section class="cover"></section>
+      <section class="cover">
+        <div class="overlay"></div>
+
+        <!-- Cover header -->
+
+        <h1 class="cover__title">
+          <span class="aligned-text">
+            <span class="">о</span>
+            <span class="letter-spacing-extended">но</span>
+          </span>
+          <span class="aligned-text_center">
+            <span>те</span>
+            <span class="letter-spacing-extended">бе</span>
+          </span>
+          <span class="aligned-text_right">
+            <span class="letter-spacing-extended">н</span>
+            <span>ад</span>
+            <span class="no-letter-spacing">о</span>
+          </span>
+        </h1>
+
+        <!-- End of cover header -->
+        
+        <!-- Cover description -->
+
+        <div class="cover__description">
+          <h2 class="cover__description-text">Аукцион    вещей,    в    которые    никто    не     верил</h2>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+
+        <!-- Cover description -->
+
+      </section>
       <section class="lots"></section>
       <section class="about"></section>
     </main>
