Cover preliminary styles. Cover section stucture modified

--- a/index.html
+++ b/index.html
@@ -70,27 +70,23 @@
 
         <h1 class="cover__title">
           <span class="aligned-text">
-            <span class="">о</span>
-            <span class="letter-spacing-extended">но</span>
+            <span>о</span><span class="letter-spacing-extended">но</span>
           </span>
-          <span class="aligned-text_center">
-            <span>те</span>
-            <span class="letter-spacing-extended">бе</span>
+          <span class="aligned-text aligned-text_center">
+            <span>те</span><span class="letter-spacing-extended">бе</span>
           </span>
-          <span class="aligned-text_right">
-            <span class="letter-spacing-extended">н</span>
-            <span>ад</span>
-            <span class="no-letter-spacing">о</span>
+          <span class="aligned-text aligned-text_right">
+            <span class="letter-spacing-extended">н</span><span>ад</span><span class="no-letter-spacing">о</span>
           </span>
         </h1>
 
         <!-- End of cover header -->
-        
+
         <!-- Cover description -->
 
-        <div class="cover__description">
-          <h2 class="cover__description-text">Аукцион    вещей,    в    которые    никто    не     верил</h2>
+        <div class="cover__description ">
           <button class="bet-button">Сделать ставку</button>
+          <h2 class="cover__description-text">Аукцион    вещей,    в    которые    никто    не     верил</h2>
         </div>
 
         <!-- Cover description -->
