--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
       </section>
       <section class="lots">
-        <h1 class="lots__heading">Лоты</h1>
+        <h2 class="lots__heading">Лоты</h2>
 
         <!-- Cards -->
 
@@ -101,7 +101,7 @@
           <li class="lots__card-list-item">
             <a class="card-link">
               <article class="card card_type_film">
-                <div class="overlay"></div>
+                <div class="overlay-new"></div>
                 <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2>
                 <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </article>
@@ -109,8 +109,8 @@
           </li>          
           <li class="lots__card-list-item">
             <a class="card-link">
-              <article class="card card_type_film">
-                <div class="overlay"></div>
+              <article class="card card_type_book">
+                <div class="overlay-new"></div>
                 <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
                 <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
               </article>
@@ -118,8 +118,8 @@
           </li>          
           <li class="lots__card-list-item">
             <a class="card-link">
-              <article class="card card_type_film">
-                <div class="overlay"></div>
+              <article class="card card_type_picture">
+                <div class="overlay-new"></div>
                 <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
                 <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
               </article>
