--- a/index.html
+++ b/index.html
@@ -138,15 +138,63 @@
           <img class="about__logo-img" src="./images/logo-white.svg" alt="Логотип" />
         </div>
 
-          <h2 class="about__title">Об аукционе</h2>
+        <h2 class="about__title">Об аукционе</h2>
         <p class="about__text first">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
         <p class="about__text second">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
-        
+      
       </section>
 
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+
+      <address class="address footer__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <br>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <br>
+        наб. Принсенграхт 263-265, Амстердам
+      </address>
+
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">          
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link footer__menu-link_active">
+              главная
+            </a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link">
+              посмотреть лоты
+            </a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link">
+              об аукционе
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link">
+            <img class="footer__social-icon" src="./images/yt.svg" alt="Иконка Youtube">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link">
+            <img class="footer__social-icon" src="./images/vk.svg" alt="И Вконтакте">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link">
+            <img class="footer__social-icon" src="./images/pinterest.svg" alt="Иконка Pinterest">
+          </a>
+        </li>
+      </ul>
+
+    </footer>
 
   </body>
 </html>
