--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+
+    <!-- Header -->
+
     <header class="header">
 
       <!-- Header menu -->
@@ -17,37 +20,37 @@
       <nav class="header-menu">
         <ul class="header__links-list">          
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link header__link_active">
+            <a class="header__link header__link_active" href="#0">
               главная
             </a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link">
+            <a class="header__link" href="#0">
               посмотреть лоты
             </a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link">
+            <a class="header__link" href="#0">
               об аукционе
             </a>
           </li>
         </ul>
       </nav>
 
-      <!-- End of header menu -->
+      <!-- Header menu end -->
+
       <!-- Header logo -->
 
-      <div class="header__logo">
-        <a>
+      <a class="header__logo" href="#0">
           <img
+          class="header__logo-image"
             src="./images/logo-black.svg"
-            alt="Логотип"
-            class="header__logo-image"
+          alt="Логотип аукциона Оно тебе надо"
           />
         </a>
-      </div>
 
       <!-- End of header logo -->
+
       <!-- Header address -->
 
       <address class="address header__address">
@@ -55,12 +58,16 @@
         <br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <br>
-        наб. Принсенграхт 263-265, Амстердам
+        наб. Принсенграхт 263-265,
+        <br>
+        Амстердам
       </address>
 
       <!-- End of header address -->
 
     </header>
+
+    <!-- Header end -->
 
     <main>
       <section class="cover">
