--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       <!-- Header logo -->
 
       <a class="header__logo" href="#0">
-          <img
+        <img
           class="header__logo-image"
-            src="./images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="Логотип аукциона Оно тебе надо"
-          />
-        </a>
+        />
+      </a>
 
       <!-- End of header logo -->
 
@@ -69,8 +69,14 @@
 
     <!-- Header end -->
 
+    <!-- Main -->
+
     <main>
+
+      <!-- Cover -->
+
       <section class="cover">
+
         <div class="overlay"></div>
 
         <!-- Cover header -->
@@ -99,7 +105,13 @@
         <!-- Cover description -->
 
       </section>
+
+      <!-- Cover end -->
+
+      <!-- Lots -->
+
       <section class="lots">
+
         <h2 class="lots__heading">Лоты</h2>
 
         <!-- Cards -->
@@ -139,21 +151,41 @@
         <a class="lots__look-more-link">посмотреть больше</a>
       </section>
 
+      <!-- Lots end -->
+
+      <!-- About -->
+
       <section class="about">
+
+        <!-- Logo -->
 
         <div class="about__logo">
           <img class="about__logo-img" src="./images/logo-white.svg" alt="Логотип" />
         </div>
 
+        <!-- Logo -->
+
+        <!-- Column -->
+
         <h2 class="about__title">Об аукционе</h2>
         <p class="about__text first">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
         <p class="about__text second">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
       
+        <!-- Column -->
+
       </section>
+
+      <!-- About end -->
 
     </main>
 
+    <!-- Main end -->
+
+    <!-- Footer -->
+
     <footer class="footer">
+
+      <!-- Footer address -->
 
       <address class="address footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -162,6 +194,10 @@
         <br>
         наб. Принсенграхт 263-265, Амстердам
       </address>
+
+      <!-- Footer address end -->
+
+      <!-- Footer menu -->
 
       <nav class="footer__menu">
         <ul class="footer__menu-list">          
@@ -183,6 +219,10 @@
         </ul>
       </nav>
 
+      <!-- Footer menu end -->
+
+      <!-- Social links -->
+
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link">
@@ -201,7 +241,11 @@
         </li>
       </ul>
 
+      <!-- Social links end -->
+
     </footer>
+
+    <!-- Footer end -->
 
   </body>
 </html>
