Cover fixes: overlay, line hight updated, background image replaced with imported from Figma, image size updated, bottom margin added

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         <!-- Cover header -->
 
         <h1 class="cover__title">
-          <span class="aligned-text">
+          <span class="aligned-text line-hight-high">
             <span>о</span><span class="letter-spacing-extended">но</span>
           </span>
-          <span class="aligned-text aligned-text_center">
+          <span class="aligned-text aligned-text_center line-hight-low">
             <span>те</span><span class="letter-spacing-extended">бе</span>
           </span>
-          <span class="aligned-text aligned-text_right">
+          <span class="aligned-text aligned-text_right line-hight-low">
             <span class="letter-spacing-extended">н</span><span>ад</span><span class="no-letter-spacing">о</span>
           </span>
         </h1>
@@ -99,7 +99,7 @@
 
         <div class="cover__description ">
           <button class="bet-button">Сделать ставку</button>
-          <h2 class="cover__description-text">Аукцион    вещей,    в    которые    никто    не     верил</h2>
+          <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
         </div>
 
         <!-- Cover description -->
