--- a/index.html
+++ b/index.html
@@ -118,27 +118,27 @@
 
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="#0">
               <article class="card card_type_film">
-                <div class="overlay-new"></div>
+                <div class="overlay"></div>
                 <h2 class="card__title">Фильм режиссёра, который бросил киношколу</h2>
                 <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </article>
             </a>
           </li>          
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="#0">
               <article class="card card_type_book">
-                <div class="overlay-new"></div>
+                <div class="overlay"></div>
                 <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
                 <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
               </article>
             </a>
           </li>          
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="#0">
               <article class="card card_type_picture">
-                <div class="overlay-new"></div>
+                <div class="overlay"></div>
                 <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
                 <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
               </article>
