Move font-size styles to parent elements. Adjust margins to standart values. Change properties order.

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
         <br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <br>
-        наб. Принсенграхт 263-265,
-        <br>
-        Амстердам
+        наб. Принсенграхт 263-265, Амстердам
       </address>
 
       <!-- End of header address -->
