Remove unused classes

--- a/index.html
+++ b/index.html
@@ -42,11 +42,7 @@
       <!-- Header logo -->
 
       <a class="header__logo" href="#0">
-        <img
-          class="header__logo-image"
-          src="./images/logo-black.svg"
-          alt="Логотип аукциона Оно тебе надо"
-        />
+        <img src="./images/logo-black.svg" alt="Логотип аукциона Оно тебе надо" />
       </a>
 
       <!-- End of header logo -->
@@ -158,13 +154,14 @@
         <!-- Logo -->
 
         <div class="about__logo">
-          <img class="about__logo-img" src="./images/logo-white.svg" alt="Логотип" />
+          <img src="./images/logo-white.svg" alt="Логотип" />
         </div>
 
         <!-- Logo -->
 
         <!-- Column -->
-        <div class="about__column">
+
+        <div>
 
           <h2 class="about__title">Об аукционе</h2>
           
@@ -189,7 +186,7 @@
 
       <!-- Footer address -->
 
-      <address class="address footer__address">
+      <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -201,8 +198,8 @@
 
       <!-- Footer menu -->
 
-      <nav class="footer__menu">
-        <ul class="footer__menu-list">          
+      <nav>
+        <ul>          
           <li class="footer__menu-list-item">
             <a class="footer__menu-link footer__menu-link_active">
               главная
@@ -227,18 +224,18 @@
 
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link">
-            <img class="footer__social-icon" src="./images/yt.svg" alt="Иконка Youtube">
+          <a href="#0">
+            <img src="./images/yt.svg" alt="Иконка Youtube">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link">
-            <img class="footer__social-icon" src="./images/vk.svg" alt="И Вконтакте">
+          <a href="#0">
+            <img src="./images/vk.svg" alt="И Вконтакте">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link">
-            <img class="footer__social-icon" src="./images/pinterest.svg" alt="Иконка Pinterest">
+          <a href="#0">
+            <img src="./images/pinterest.svg" alt="Иконка Pinterest">
           </a>
         </li>
       </ul>
