--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
 
@@ -42,7 +42,7 @@
       <!-- Header logo -->
 
       <a class="header__logo" href="#0">
-        <img src="./images/logo-black.svg" alt="Логотип аукциона Оно тебе надо" />
+        <img src="./images/logo-black.svg" alt="Логотип аукциона Оно тебе надо">
       </a>
 
       <!-- End of header logo -->
@@ -154,7 +154,7 @@
         <!-- Logo -->
 
         <div class="about__logo">
-          <img src="./images/logo-white.svg" alt="Логотип" />
+          <img src="./images/logo-white.svg" alt="Логотип">
         </div>
 
         <!-- Logo -->
