Fix Addrees: remove breaks, change links display, add paragraph, add link class

--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
       <!-- Header address -->
 
       <address class="address header__address">
-        <a href="tel:+99995555555">+9 999 555 5555</a>
-        <br>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <br>
-        наб. Принсенграхт 263-265, Амстердам
+        <a class="address-link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
 
       <!-- End of header address -->
@@ -187,11 +185,9 @@
       <!-- Footer address -->
 
       <address class="address">
-        <a href="tel:+99995555555">+9 999 555 5555</a>
-        <br>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <br>
-        наб. Принсенграхт 263-265, Амстердам
+        <a class="address-link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
 
       <!-- Footer address end -->
