Fix Cover: remove cover height restriction, replace h2 with p, place the card background size as a card rule, add cursor pointer on button hover

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="cover__description ">
           <button class="bet-button">Сделать ставку</button>
-          <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
         </div>
 
         <!-- Cover description -->
