Fix Lots adn Footer links

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <!-- End of cards -->
 
-        <a class="lots__look-more-link">посмотреть больше</a>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
 
       <!-- Lots end -->
@@ -197,17 +197,17 @@
       <nav>
         <ul>          
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active">
+            <a class="footer__menu-link footer__menu-link_active" href="#0">
               главная
             </a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link">
+            <a class="footer__menu-link" href="#0">
               посмотреть лоты
             </a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link">
+            <a class="footer__menu-link" href="#0">
               об аукционе
             </a>
           </li>
